# TDG2CUDAGraphBenchs

./: README.md  run_all.sh
GridMini/: Makefile  README.md
GridMini/benchmarks/: Benchmark_su3.cc  original_Benchmark_su3.cc
GridMini/perf/: run.sh
TestSNAP/: CMakeLists.txt  README.md
TestSNAP/perf/: run.sh
TestSNAP/src/: sna.cpp  threading_sna.cpp
arch/: shared.h
arch/neutral/: Makefile  Makefile.cuda  README.md  main.c  neutral_data.c
arch/neutral/omp4/: neutral.c  original_neutral.c
arch/neutral/perf/: run.sh
arch/omp4/: shared.c
daphne-benchmark/: Makefile
daphne-benchmark/src/Cuda/euclidean_cluster/: kernel
daphne-benchmark/src/Cuda/ndt_mapping/: Makefile.deps  kernel
daphne-benchmark/src/Cuda/points2image/: kernel.cu
daphne-benchmark/src/Cuda/points2image/perf/: run.sh
daphne-benchmark/src/OpenMP-offload/euclidean_cluster/: Makefile  kernel
daphne-benchmark/src/OpenMP-offload/ndt_mapping/: Makefile  Makefile.deps  kernel
daphne-benchmark/src/OpenMP-offload/points2image/default_timing/: Makefile  Makefile.deps  kernel.cpp  tdg_kernel.cpp
daphne-benchmark/src/OpenMP-offload/points2image/default_timing/perf/: run.sh
daphne-benchmark/src/OpenMP-offload/points2image/heterogeneousGraph_74iters_timing/: Makefile  Makefile.deps  hetero_tdg_kernel.cpp  kernel.cpp
daphne-benchmark/src/OpenMP-offload/points2image/heterogeneousGraph_74iters_timing/perf/: run.sh
daphne-benchmark/src/OpenMP/euclidean_cluster/: kernel
daphne-benchmark/src/OpenMP/ndt_mapping/: kernel
daphne-benchmark/src/OpenMP/points2image/: kernel
heat/: Makefile  README.md  heat.c  heat_for_target.c  heat_target.c
heat/perf/: run.sh
nbody/: Makefile
nbody/data/input/: nbody_input.in_1048576  nbody_input.in_262144  nbody_input.in_524288
nbody/perf/: run.sh
nbody/src_cuda/: cudaErr.h  cuda_main.cu  global_kernel.cu  global_nbody_cuda.cu  kernel.h  util.cu
nbody/src_target/: kernel.c  main.c
